--- a/00/02.md
+++ b/00/02.md
@@ -311,7 +311,7 @@ $$
 
 ## 实现线性单元
 
-> 完整代码请参考 GitHub: https://github.com/hanbt/learn_dl/blob/master/linear_unit.py (python2.7)
+> 完整代码请参考 GitHub: <https://github.com/hanbt/learn_dl/blob/master/linear_unit.py> (python2.7)
 
 接下来，让我们撸一把代码。
 
