--- a/00/03.md
+++ b/00/03.md
@@ -408,8 +408,6 @@ $$
 
 上式就是**式 4**。
 
-**——数学公式警报解除——**
-
 至此，我们已经推导出了反向传播算法。需要注意的是，我们刚刚推导出的训练规则是根据激活函数是 sigmoid 函数、平方和误差、全连接网络、随机梯度下降优化算法。如果激活函数不同、误差计算方式不同、网络连接结构不同、优化算法不同，则具体的训练规则也会不一样。但是无论怎样，训练规则的推导方式都是一样的，应用链式求导法则进行推导即可。
 
 ## 神经网络的实现
@@ -723,7 +721,7 @@ $$
 w_{ji}\gets w_{ji}-\eta\frac{\partial{E_d}}{\partial{w_{ji}}}
 $$
 
-来说，这里关键之处在于$$\frac{\partial{E_d}}{\partial{w_{ji}}}$$的计算一定要正确，而它是$$E_d$$对$$w_{ji}$$的*偏导数*。而根据导数的定义：
+来说，这里关键之处在于$$\frac{\partial{E_d}}{\partial{w_{ji}}}$$的计算一定要正确，而它是$$E_d$$对$$w_{ji}$$的**偏导数**。而根据导数的定义：
 
 $$
 f'(\theta)=\lim_{\epsilon->0}\frac{f(\theta+\epsilon)-f(\theta-\epsilon)}{2\epsilon}
