--- a/00/04.md
+++ b/00/04.md
@@ -1048,11 +1048,11 @@ class MaxPoolingLayer(object):
 
 关于*LeNet-5*的详细介绍，网上的资料很多，因此就不再重复了。感兴趣的读者可以尝试用我们自己实现的卷积神经网络代码去构造并训练*LeNet-5*（当然代码会更复杂一些）。
 
-# 小节
+## 小节
 
 由于**卷积神经网络**的复杂性，我们写出了整个系列目前为止最长的一篇文章，相信读者也和作者一样累的要死。**卷积神经网络**是深度学习最重要的工具（我犹豫要不要写上『之一』呢），付出一些辛苦去理解它也是值得的。如果您真正理解了本文的内容，相当于迈过了入门深度学习最重要的一到门槛。在下一篇文章中，我们介绍深度学习另外一种非常重要的工具：**循环神经网络**，届时我们的系列文章也将完成过半。每篇文章都是一个过滤器，对于坚持到这里的读者们，入门深度学习曙光已现，加油。
 
-# 参考资料
+## 参考资料
 
 1. [CS231n Convolutional Neural Networks for Visual Recognition](http://cs231n.github.io/convolutional-networks/)
 2. [ReLu (Rectified Linear Units) 激活函数](http://www.mamicode.com/info-detail-873243.html)
@@ -1073,4 +1073,4 @@ class MaxPoolingLayer(object):
 [00-04-12]: ../.gitbook/assets/00/04-12.gif
 [00-04-13]: ../.gitbook/assets/00/04-13.png
 [00-04-14]: ../.gitbook/assets/00/04-14.png
-[00-04-15]:  ../.gitbook/assets/00/04-15.png
+[00-04-15]: ../.gitbook/assets/00/04-15.png
