--- a/00/04.md
+++ b/00/04.md
@@ -14,14 +14,14 @@ $$
 
 Relu 函数图像如下图所示：
 
-![00-04-01][00-04-01]
+![00-04-01][]
 
 Relu 函数作为激活函数，有下面几大优势：
 
 - **速度快** 和 sigmoid 函数需要计算指数和倒数相比，relu 函数其实就是一个 max(0,x)，计算代价小很多。
 - **减轻梯度消失问题** 回忆一下计算梯度的公式$$\nabla=\sigma'\delta x$$。其中$$\sigma'$$，是 sigmoid 函数的导数。在使用反向传播算法进行梯度计算时，每经过一层 sigmoid 神经元，梯度就要乘上一个$$\sigma'$$。从下图可以看出，$$\sigma'$$函数最大值是 1/4。因此，乘一个$$\sigma'$$会导致梯度越来越小，这对于深层网络的训练是个很大的问题。而 relu 函数的导数是 1，不会导致梯度变小。当然，激活函数仅仅是导致梯度减小的一个因素，但无论如何在这方面 relu 的表现强于 sigmoid。使用 relu 激活函数可以让你训练更深的网络。
 
-![00-04-02][00-04-02]
+![00-04-02][]
 
 - **稀疏性** 通过对大脑的研究发现，大脑在工作的时候只有大约 5%的神经元是激活的，而采用 sigmoid 激活函数的人工神经网络，其激活率大约是 50%。有论文声称人工神经网络在 15%-30%的激活率时是比较理想的。因为 relu 函数在输入小于 0 时是完全不激活的，因此可以获得一个更低的激活率。
 
@@ -47,7 +47,7 @@ Relu 函数作为激活函数，有下面几大优势：
 
 首先，我们先获取一个感性认识，下图是一个卷积神经网络的示意图：
 
-![00-04-03][00-04-03]
+![00-04-03][]
 
 ### 网络架构
 
@@ -87,7 +87,7 @@ Relu 函数作为激活函数，有下面几大优势：
 
 假设有一个 5*5 的图像，使用一个 3*3 的 filter 进行卷积，想得到一个 3\*3 的 Feature Map，如下所示：
 
-![00-04-04][00-04-04]
+![00-04-04][]
 
 为了清楚的描述**卷积**计算过程，我们首先对图像的每个像素进行编号，用$$x_{i,j}$$表示图像的第$$i$$行第$$j$$列元素；对 filter 的每个权重进行编号，用$$w_{m,n}$$表示第$$m$$行第$$n$$列权重，用$$w_b$$表示 filter 的**偏置项**；对 Feature Map 的每个元素进行编号，用$$a_{i,j}$$表示 Feature Map 的第$$i$$行第$$j$$列元素；用$$f$$表示**激活函数**(这个例子选择**relu 函数**作为激活函数)。然后，使用下列公式计算卷积：
 
@@ -125,21 +125,21 @@ $$
 
 计算结果如下图所示：
 
-![00-04-06][00-04-06]
+![00-04-06][]
 
 可以依次计算出 Feature Map 中所有元素的值。下面的动画显示了整个 Feature Map 的计算过程：
 
-![00-04-07][00-04-07]
+![00-04-07][]
 
 上面的计算过程中，步幅(stride)为 1。步幅可以设为大于 1 的数。例如，当步幅为 2 时，Feature Map 计算如下：
 
-![00-04-08][00-04-08]
+![00-04-08][]
 
-![00-04-09][00-04-09]
+![00-04-09][]
 
-![00-04-10][00-04-10]
+![00-04-10][]
 
-![00-04-11][00-04-11]
+![00-04-11][]
 
 我们注意到，当**步幅**设置为 2 的时候，Feature Map 就变成 2\*2 了。这说明图像大小、步幅和卷积后的 Feature Map 大小是有关系的。事实上，它们满足下面的关系：
 
@@ -337,7 +337,7 @@ $$
 
 从上面三个例子，我们发挥一下想象力，不难发现，计算$$\frac{\partial{E_d}}{\partial{a^{l-1}}}$$，相当于把第$$l$$层的 sensitive map 周围补一圈 0，在与 180 度翻转后的 filter 进行**cross-correlation**，就能得到想要结果，如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-2fb37b0a3ff0e1f9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-16][]
 
 因为**卷积**相当于将 filter 旋转 180 度的**cross-correlation**，因此上图的计算可以用卷积公式完美的表达：
 
@@ -387,15 +387,15 @@ $$
 
 我们先来看看步长为 S 与步长为 1 的差别。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-754f37eb7603e99f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-17][]
 
 如上图，上面是步长为 1 时的卷积结果，下面是步长为 2 时的卷积结果。我们可以看出，因为步长为 2，得到的 feature map 跳过了步长为 1 时相应的部分。因此，当我们反向计算**误差项**时，我们可以对步长为 S 的 sensitivity map 相应的位置进行补 0，将其『还原』成步长为 1 时的 sensitivity map，再用**式 8**进行求解。
 
 ##### 输入层深度为 D 时的误差传递
 
-当输入深度为 D 时，filter 的深度也必须为 D，$$l-1$$层的$$d_i通$$道只与 filter 的$$d_i$$通道的权重进行计算。因此，反向计算**误差项**时，我们可以使用**式 8**，用 filter 的第$$d_i$$通道权重对第$$l$$层 sensitivity map 进行卷积，得到第$$l-1$$层$$d_i$$通道的 sensitivity map。如下图所示：
+当输入深度为 D 时，filter 的深度也必须为 D，$$l-1$$层的$$d_i通$$道只与 filter 的$$d_i$$通道的权重进行计算。因此，反向计算**误差项**时，我们可以使用**式 8**，用 filter 的第$$d_i$$通道权重对第$$l$$层 sensitivity map 进行卷积，得到第$$l-1$$层$$d_i$$通道的 sensitivity map。如下图所示
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-af2da9701a03dc3c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-18][]
 
 ##### filter 数量为 N 时的误差传递
 
@@ -411,7 +411,7 @@ $$
 
 我们要在得到第$$l$$层 sensitivity map 的情况下，计算 filter 的权重的梯度，由于卷积层是**权重共享**的，因此梯度的计算稍有不同。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-afe6d3a863b7cbcc.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-19][]
 
 如上图所示，$$a^l_{i,j}$$是第$$l-1$$层的输出，$$w_{i,j}$$是第$$l$$层 filter 的权重，$$\delta^l_{i,j}$$是第$$l$$层的 sensitivity map。我们的任务是计算$$w_{i.j}$$的梯度，即$$\frac{\partial{E_d}}{\partial{w_{i,j}}}$$。
 
@@ -451,7 +451,7 @@ $$
 
 也就是用 sensitivity map 作为卷积核，在 input 上进行**cross-correlation**，如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-aeba8c8666a22e72.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-20][]
 
 最后，我们来看一看偏置项的梯度$$\frac{\partial{E_d}}{\partial{w_b}}$$。通过查看前面的公式，我们很容易发现：
 
@@ -479,7 +479,7 @@ $$
 
 如下图，假设第$$l-1$$层大小为 `4*4`，pooling filter 大小为 2\*2，步长为 2，这样，max pooling 之后，第$$l$$层大小为 2\*2。假设第$$l$$层的$$\delta$$值都已经计算完毕，我们现在的任务是计算第$$l-1$$层的$$\delta$$值。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-a30c883f19db53b4.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-21][]
 
 我们用$$net^{l-1}_{i,j}$$表示第$$l-1$$层的**加权输入**；用$$net^{l}_{i,j}$$表示第$$l$$层的**加权输入**。我们先来考察一个具体的例子，然后再总结一般性的规律。对于 max pooling：
 
@@ -532,13 +532,13 @@ $$
 
 现在，我们发现了规律：对于 max pooling，下一层的**误差项**的值会原封不动的传递到上一层对应区块中的最大值所对应的神经元，而其他神经元的**误差项**的值都是 0。如下图所示(假设$$a^{l-1}_{1,1}$$、$$a^{l-1}_{1,4}$$、$$a^{l-1}_{4,1}$$、$$a^{l-1}_{4,4}$$为所在区块中的最大输出值)：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-af77e98c09fad84c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-22][]
 
 #### Mean Pooling 误差项的传递
 
 我们还是用前面屡试不爽的套路，先研究一个特殊的情形，再扩展为一般规律。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-a30c883f19db53b4.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-21][]
 
 如上图，我们先来考虑计算$$\delta^{l-1}_{1,1}$$。我们先来看看$$net^{l-1}_{1,1}$$如何影响$$net^{l}_{1,1}$$。
 
@@ -583,7 +583,7 @@ $$
 
 现在，我们发现了规律：对于 mean pooling，下一层的**误差项**的值会**平均分配**到上一层对应区块中的所有神经元。如下图所示：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-c3a6772cb07b416a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/640)
+![00-04-23][]
 
 上面这个算法可以表达为高大上的**克罗内克积(Kronecker product)**的形式，有兴趣的读者可以研究一下。
 
@@ -985,7 +985,7 @@ def gradient_check():
 
 运行上面梯度检查的代码，我们得到的输出如下，期望的梯度和实际计算出的梯度一致，这证明我们的算法推导和代码实现确实是正确的。
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-c7071f47ea5f8f9a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/480)
+![00-04-24][]
 
 以上就是卷积层的实现。
 
@@ -1044,7 +1044,7 @@ class MaxPoolingLayer(object):
 
 *LeNet-5*是实现手写数字识别的**卷积神经网络**，在 MNIST 测试集上，它取得了 0.8%的错误率。*LeNet-5*的结构如下：
 
-![img](http://upload-images.jianshu.io/upload_images/2256672-31b42c6c9daa16a4.png)
+![00-04-25][]
 
 关于*LeNet-5*的详细介绍，网上的资料很多，因此就不再重复了。感兴趣的读者可以尝试用我们自己实现的卷积神经网络代码去构造并训练*LeNet-5*（当然代码会更复杂一些）。
 
@@ -1074,3 +1074,13 @@ class MaxPoolingLayer(object):
 [00-04-13]: ../.gitbook/assets/00/04-13.png
 [00-04-14]: ../.gitbook/assets/00/04-14.png
 [00-04-15]: ../.gitbook/assets/00/04-15.png
+[00-04-16]: ../.gitbook/assets/00/04-16.png
+[00-04-17]: ../.gitbook/assets/00/04-17.png
+[00-04-18]: ../.gitbook/assets/00/04-18.png
+[00-04-19]: ../.gitbook/assets/00/04-19.png
+[00-04-20]: ../.gitbook/assets/00/04-20.png
+[00-04-21]: ../.gitbook/assets/00/04-21.png
+[00-04-22]: ../.gitbook/assets/00/04-22.png
+[00-04-23]: ../.gitbook/assets/00/04-23.png
+[00-04-24]: ../.gitbook/assets/00/04-24.png
+[00-04-25]: ../.gitbook/assets/00/04-25.png
