--- a/00/01.md
+++ b/00/01.md
@@ -8,7 +8,7 @@
 
 在人工智能领域，有一个方法叫机器学习。在机器学习这个方法里，有一类算法叫神经网络。神经网络如下图所示：
 
-![00-01-01](../.gitbook/assets/00/01-01.png)
+![00-01-01][]
 
 上图中每个圆圈都是一个神经元，每条线表示神经元之间的连接。我们可以看到，上面的神经元被分成了多层，层与层之间的神经元有连接，而层内之间的神经元没有连接。最左边的层叫做**输入层**，这层负责接收输入数据；最右边的层叫**输出层**，我们可以从这层获取神经网络输出数据。输入层和输出层之间的层叫做**隐藏层**。
 
@@ -18,7 +18,7 @@
 
 深层网络也有劣势，就是它不太容易训练。简单的说，你需要大量的数据，很多的技巧才能训练好一个深层网络。这是个手艺活。
 
-## 感知器
+## 神经元/感知器
 
 看到这里，如果你还是一头雾水，那也是很正常的。为了理解神经网络，我们应该先理解神经网络的组成单元——**神经元**。神经元也叫做**感知器**。感知器算法在上个世纪 50-70 年代很流行，也成功解决了很多问题。并且，感知器算法也是非常简单的。
 
@@ -26,7 +26,7 @@
 
 下图是一个感知器：
 
-![00-01-02](../.gitbook/assets/00/01-02.png)
+![00-01-02][]
 
 可以看到，一个感知器有如下组成部分：
 
@@ -103,7 +103,7 @@ $$
 
 事实上，感知器不仅仅能实现简单的布尔运算。它可以拟合任何的线性函数，任何**线性分类**或**线性回归**问题都可以用感知器来解决。前面的布尔运算可以看作是**二分类**问题，即给定一个输入，输出 0（属于分类 0）或 1（属于分类 1）。如下面所示，`and`运算是一个线性分类问题，即可以用一条直线把分类 0（false，红叉表示）和分类 1（true，绿点表示）分开。
 
-![00-01-03](../.gitbook/assets/00/01-03.png)
+![00-01-03][]
 
 然而，感知器却不能实现异或运算，如下图所示，异或运算不是线性的，你无法用一条直线把分类 0 和分类 1 分开。
 
@@ -266,3 +266,7 @@ if __name__ == '__main__':
 ## 参考资料
 
 1. Tom M. Mitchell, "机器学习", 曾华军等译, 机械工业出版社
+
+[00-01-01]: ../.gitbook/assets/00/01-01.png
+[00-01-02]: ../.gitbook/assets/00/01-02.png
+[00-01-03]: ../.gitbook/assets/00/01-03.png
